// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json.yml - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here"
  },
  {
    "object-fits-within-print-width": "",
    "TEST": "comma NOT here"
  },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'"
  },
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ],
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ],
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]
]

=====================================output=====================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here",
  },
  { "object-fits-within-print-width": "", "TEST": "comma NOT here" },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'",
  },
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here",
  ],
  ["object-fits-within-print-width", "", "TEST", "comma NOT here"],
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma NOT here — but object's now a string due to '>'",
  ],
]

================================================================================
`;

exports[`json.yml - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here"
  },
  {
    "object-fits-within-print-width": "",
    "TEST": "comma NOT here"
  },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'"
  },
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ],
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ],
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]
]

=====================================output=====================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here",
  },
  { "object-fits-within-print-width": "", "TEST": "comma NOT here" },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'",
  },
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here",
  ],
  ["object-fits-within-print-width", "", "TEST", "comma NOT here"],
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma NOT here — but object's now a string due to '>'",
  ],
]

================================================================================
`;

exports[`json.yml - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here"
  },
  {
    "object-fits-within-print-width": "",
    "TEST": "comma NOT here"
  },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'"
  },
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ],
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ],
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]
]

=====================================output=====================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here"
  },
  { "object-fits-within-print-width": "", "TEST": "comma NOT here" },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'"
  },
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here"
  ],
  ["object-fits-within-print-width", "", "TEST", "comma NOT here"],
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma NOT here — but object's now a string due to '>'"
  ]
]

================================================================================
`;

exports[`json.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here"
  },
  {
    "object-fits-within-print-width": "",
    "TEST": "comma NOT here"
  },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'"
  },
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ],
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ],
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]
]

=====================================output=====================================
[
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma IS added here",
  },
  { "object-fits-within-print-width": "", "TEST": "comma NOT here" },
  {
    "object-does-not-fit-within-print-width": "------",
    "TEST": "comma NOT here — but object's now a string due to '>'",
  },
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here",
  ],
  ["object-fits-within-print-width", "", "TEST", "comma NOT here"],
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma NOT here — but object's now a string due to '>'",
  ],
]

================================================================================
`;
